# fibonacci

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
fibonacci/: main.py
fibonacci/routers/: main.py
fibonacci/services/: fibonacci.py  test_fibonacci.py
terraform/: locals.tf  main.tf  variables.tf
