[project]
requires-python = ">= 3.12"

[tool.black]
include = '\.pyi?$'

[tool.poetry]
name = "fibonacci"
version = "0.1.0"
description = ""
authors = ["Lisa Stedman-Falls <lstedmanfalls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
